Add thumbnails, edit footer and header

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -34,6 +34,14 @@ textarea {
   border-color: #8d64ce;
 }
 
+.thumbnail {
+  box-shadow: 0 0 5px 1px rgba(161, 222, 192, 1);
+}
+
+.thumbnail-center {
+  text-align: center;
+}
+
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
@@ -41,7 +49,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 1em;
+  font-size: 2em;
   letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
@@ -91,8 +99,6 @@ p {
 footer {
   margin-top: 45px;
   padding-top: 5px;
-  border-top: 1px solid #eaeaea;
-  color: #777;
 }
 
 footer a {
@@ -115,4 +121,5 @@ footer ul {
 footer ul li {
   float: left;
   margin-left: 15px;
+  padding-right: 10px;
 }
