--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer navbar-fixed-bottom">
   <nav>
     <ul>
       <li><a href="https://github.com/lgrgic/API_task" target="_blank">GitHub</a></li>
