--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,9 +1,10 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
-    <%= link_to "Holiday Extras Task", '#', id: "logo" %>
+    <%= link_to "Holiday Extras Task", root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Create Users",   '#' %></li>
+        <li><%= link_to "List of Users", users_path %></li>
+        <li><%= link_to 'Create New User', new_user_path %></li>
       </ul>
     </nav>
   </div>
