--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,35 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Users</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Given Name:</th>
-      <th>Family Name:</th>
-      <th>Email:</th>
-      <th>Created at:</th>
-      <th>Last update:</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.givenName %></td>
-        <td><%= user.familyName %></td>
-        <td><%= user.email %></td>
-        <td><%= user.created_at %></td>
-        <td><%= user.updated_at %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New User', new_user_path %>
+  <% @users.each do |user| %>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <strong>Given Name:</strong><p><%= user.givenName %></p>
+        <strong>Family Name:</strong><p><%= user.familyName %></p>
+        <strong>Email:</strong><p><%= user.email %></p>
+        <strong>Created at:</strong><p><%= user.created_at %></p>
+        <strong>Last update:</strong><p><%= user.updated_at %></p>
+        <p><%= link_to 'Show', user %></p>
+        <p><%= link_to 'Edit', edit_user_path(user) %></p>
+        <p><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+      </div>
+    </div>
+  <% end %>
