--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,29 +1,32 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Given Name:</strong>
-  <%= @user.givenName %>
-</p>
+<h1>User Details</h1>
+  <div class="thumbnail">
+    <p>
+      <strong>Given Name:</strong>
+      <%= @user.givenName %>
+    </p>
 
-<p>
-  <strong>Family Name:</strong>
-  <%= @user.familyName %>
-</p>
+    <p>
+      <strong>Family Name:</strong>
+      <%= @user.familyName %>
+    </p>
 
-<p>
-  <strong>Email:</strong>
-  <%= @user.email %>
-</p>
+    <p>
+      <strong>Email:</strong>
+      <%= @user.email %>
+    </p>
 
-<p>
-  <strong>Created at:</strong>
-  <%= @user.created_at %>
-</p>
+    <p>
+      <strong>Created at:</strong>
+      <%= @user.created_at %>
+    </p>
 
-<p>
-  <strong>Last update:</strong>
-  <%= @user.updated_at %>
-</p>
+    <p>
+      <strong>Last update:</strong>
+      <%= @user.updated_at %>
+    </p>
 
-<%= link_to 'Edit', edit_user_path(@user) %> |
-<%= link_to 'Back', users_path %>
+    <%= link_to 'Edit', edit_user_path(@user) %> |
+    <%= link_to 'Back', users_path %>
+  </div>
