--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,4 +1,6 @@
-<div class="center jumbotron">
-  <h1>Web Development API Task</h1>
-  <a href="#" class="btn btn-lg btn-primary">Create users now!</a>
+<div class="container">
+  <div class="center jumbotron">
+    <h1>Web Development API Task</h1>
+    <%= link_to 'Create New User', new_user_path, class:"btn btn-lg btn-primary" %>
+  </div>
 </div>
