--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Editing User</h1>
+<div class="container">
+  <h1>Editing User</h1>
   <div class="thumbnail">
     <div class="thumbnail-center">
     <%= render 'form', user: @user %>
@@ -7,3 +8,4 @@
     <%= link_to 'Back', users_path %>
     </div>
   </div>
+</div>
