--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,10 @@
-<h1>New User</h1>
+<div class="container">
+  <h1>New User</h1>
+  <div class="thumbnail">
+    <div class="thumbnail-center">
+      <%= render 'form', user: @user %>
 
-<div class="thumbnail">
-  <div class="thumbnail-center">
-<%= render 'form', user: @user %>
-
-<%= link_to 'Back', users_path %>
-</div>
+      <%= link_to 'List of active users', users_path %>
+    </div>
+  </div>
 </div>
