--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,7 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <p id="notice"><%= notice %></p>
 
-<h1>User Details</h1>
+  <h1>User Details</h1>
   <div class="thumbnail">
     <p>
       <strong>Given Name:</strong>
@@ -27,6 +28,7 @@
       <%= @user.updated_at %>
     </p>
 
-    <%= link_to 'Edit', edit_user_path(@user) %> |
-    <%= link_to 'Back', users_path %>
+    <%= link_to 'Edit', edit_user_path(@user), class:"btn btn-primary" %> |
+    <%= link_to 'Back', users_path, class:"btn btn-primary" %>
   </div>
+</div>
