--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,9 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
 
+  <div class="pagination">
+    <%= will_paginate %>
+  </div>
   <h1>Users</h1>
   <% @users.each do |user| %>
     <div class="col-md-4">
@@ -22,4 +25,5 @@
       </div>
     </div>
   <% end %>
+
 </div>
