--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,7 +20,7 @@
           <%= link_to 'Edit', edit_user_path(user), class:"btn btn-primary" %>
         </div>
         <div class="btn-group">
-          <%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-primary" %>
+          <%= link_to 'Delete', user, method: :delete, data: { confirm: 'Are you sure?' }, class:"btn btn-primary" %>
         </div>
       </div>
     </div>
