--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,6 +23,11 @@
       <%= @user.created_at %>
     </p>
 
+    <p>
+      <strong>User ID:</strong>
+      <%= @user.id %>
+    </p>
+
     <%= link_to 'Edit', edit_user_path(@user), class:"btn btn-primary" %> |
     <%= link_to 'Back', users_path, class:"btn btn-primary" %>
   </div>
